# Fun4AllVectFileManager

./: .gitignore  README.md
Convert/ConvertToStruct/maker/: ConvertVectToStruct  StructWrite
Convert/ConvertToStruct/src/: CMakeLists.txt  ConvertVectToStruct.cc  ConvertVectToStruct.h  LinkDef.h  StructWrite.cc  StructWrite.h  TreeData.cc  TreeData.h
Convert/ConvertToVect/: ConvertToVect.C  ConvertToVect_C.d  setup.sh
Convert/ConvertToVect/src/: CMakeLists.txt  ConvertToVect.C
Convert/ConvertVectToStruct/: setup.sh
Convert/ConvertVectToStruct/maker/: ConvertVectToStruct
Convert/ConvertVectToStruct/src/: CMakeLists.txt  ConvertVectToStruct.C  ConvertVectToStruct.h
Fun4AllVectFileManager/: setup.sh
Fun4AllVectFileManager/src/: CMakeLists.txt  Fun4AllVectEventInputManager.cc  Fun4AllVectEventOutputManager.cc  Fun4AllVectEventOutputManager.h
StructDef/: setup.sh
StructDef/src/: CMakeLists.txt  StructDef.cc  StructDef.h  StructDef_LinkDef.h
Test/Main/: main_script.sh  setup.sh
Test/Main/GetEvents/: CombineFiles.py  GetEvents.py  setup.sh
Test/Main/analyze/: analyze_basketsize.py  analyze_tradeoffs.py  best_performer.py  overall_performance_score.py  percent_change_scatter_plot.py  setup.sh
Test/Main/analyze/autoflush/: better_performer_autoflush.py  get_change_autoflush.py  per_file_analysis.py
Test/Main/analyze/basket_size/: analyze_basketsize.py
Test/Main/analyze/specific_algo_level/: analyze_algo_level.py
Test/Main/analyze/structure_comp/: compare_structure.py
Test/Main/compare/: compare.py
Test/Main/results/: add_to_combined_results.sh
Test/TestStruct/: setup.sh  test_struct.sh  test_write_read.sh  time_reading_script.py
Test/TestStruct/maker/: StructRewrite  test_compression.sh
Test/TestStruct/src/: CMakeLists.txt  StructRewrite.cc  StructRewrite.h
Test/TestVector/: setup.sh  test_write_read.sh
Test/TestVector/maker/: VectorRewrite
Test/TestVector/src/: CMakeLists.txt  VectorRewrite.cc  VectorRewrite.h
Test/VectorWrite/maker/: VectorWrite
Test/VectorWrite/src/: VectorWrite.cc
